--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -6,7 +6,7 @@
 :root {
 	--fonts: "Work Sans", sans-serif;
 
-	background-color: #1f2232;
+	background-color: #ffd4d2;
 	color: #1f2232;
 	font-family: var(--fonts);
 }
@@ -18,6 +18,7 @@ body {
 	place-items: center;
 	min-height: 100vh;
 	text-align: center;
+	background: linear-gradient(45deg, #ffedec, #fff4e0);
 }
 
 @media screen and (max-width: 480px) {
@@ -62,7 +63,8 @@ a[href] {
 	width: clamp(0px, 500px, 100%);
 	box-shadow: 0 4px 8px 0 rgb(0 0 0 / 50%);
 	border-radius: 8px;
-	background-color: #fde8e9;
+	background-color: #fffbeb;
+	/* border: 2px solid #fea6a1; */
 }
 
 .main-container > h1 {
@@ -70,7 +72,7 @@ a[href] {
 }
 
 img.logo {
-	width: 6rem;
+	width: clamp(0px, 250px, 100%);
 }
 
 .alert-container {
@@ -79,7 +81,7 @@ img.logo {
 	padding: 1em;
 	margin-top: 1.25em;
 	border-radius: 8px;
-	border: 2px solid hsl(342, 92%, 81%);
+	border: 2px solid #fea6a1;
 }
 
 .alert-container > h1:first-child {
@@ -93,7 +95,8 @@ img.logo {
 a.button {
 	display: block;
 	margin-top: 1.25rem;
-	background-color: hsl(342, 42%, 95%);
+	background-color: #fffef7;
+	/* border: 2px solid #ffd5d3; */
 	box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
 	border-radius: 8px;
 	font-size: 1.25rem;
@@ -104,6 +107,6 @@ a.button {
 }
 
 a.button:hover {
-	background-color: hsl(342, 42%, 96%);
+	background-color: #fcfbf4;
 	box-shadow: 0 6px 10px 0 rgb(0 0 0 / 20%);
 }
